Made utilities folder compile on Ubuntu 12.04; systrace_utils and openbsd_utils have been removed from Makefile

--- a/utilities/Makefile
+++ b/utilities/Makefile
@@ -3,10 +3,11 @@ CC = gcc
 CFLAGS = \
   -fno-builtin \
   -I../logger \
-  -I/usr/local/include \
-  -I/usr/local/include/glib-2.0 -I/usr/local/lib/glib-2.0/include \
-  -I/usr/local/include/libsoup-2.4 \
-  -I/usr/local/include/libxml2
+  -I/usr/include \
+  -I/usr/include/glib-2.0 \
+  -I/usr/include/libsoup-2.4 \
+  -I/usr/include/libxml2 \
+  -I/usr/lib/i386-linux-gnu/glib-2.0/include/
   
 LIBS = \
   -L/usr/local/lib \
@@ -21,7 +22,8 @@ LIBS = \
 LOGGER = ../logger/logger.h
 
 #all: hash_table.o str_utils.o soup_utils.o crypto_utils.o tss_utils.o xml_utils.o time_utils.o systrace_utils.o openbsd_utils.o network_utils.o filesystem_utils.o threads.o
-all: hash_table.o str_utils.o soup_utils.o xml_utils.o time_utils.o systrace_utils.o openbsd_utils.o network_utils.o filesystem_utils.o threads.o
+#all: hash_table.o str_utils.o soup_utils.o xml_utils.o time_utils.o systrace_utils.o openbsd_utils.o network_utils.o filesystem_utils.o threads.o
+all: hash_table.o str_utils.o soup_utils.o xml_utils.o time_utils.o network_utils.o filesystem_utils.o threads.o
 
 filesystem_utils.o: filesystem_utils.c filesystem_utils.h
 	$(CC) $(CFLAGS) -Wall -c filesystem_utils.c -o filesystem_utils.o
@@ -50,8 +52,8 @@ crypto_utils.o: crypto_utils.c crypto_utils.h $(LOGGER)
 tss_utils.o: tss_utils.c tss_utils.h $(LOGGER)
 	$(CC) $(CFLAGS) -c tss_utils.c -o tss_utils.o
 
-systrace_utils.o: systrace_utils.c systrace_utils.h $(LOGGER)
-	$(CC) $(CFLAGS) -c systrace_utils.c -o systrace_utils.o
+#systrace_utils.o: systrace_utils.c systrace_utils.h $(LOGGER)
+#	$(CC) $(CFLAGS) -c systrace_utils.c -o systrace_utils.o
 
 openbsd_utils.o: openbsd_utils.c openbsd_utils.h $(LOGGER)
 	$(CC) $(CFLAGS) -c openbsd_utils.c -o openbsd_utils.o
