--- a/event/Makefile
+++ b/event/Makefile
@@ -4,11 +4,11 @@ CFLAGS = \
   -I. \
   -I../logger \
   -I../utilities \
-  -I/usr/local/include \
-  -I/usr/local/include/glib-2.0 \
-  -I/usr/local/lib/glib-2.0/include \
-  -I/usr/local/include/libsoup-2.4 \
-  -I/usr/local/include/libxml2
+  -I/usr/include \
+  -I/usr/include/glib-2.0 \
+  -I/usr/lib/glib-2.0/include \
+  -I/usr/include/libsoup-2.4 \
+  -I/usr/include/libxml2
 
 OBJ_UTILS = ../logger/logger.o
 
