--- a/shell_wrapper/Makefile
+++ b/shell_wrapper/Makefile
@@ -1,34 +1,24 @@
 CC = gcc
 
-CFLAGS = \
+CFLAGS = -std=gnu99 \
+  -Wall \
   -fno-builtin \
   -I../logger \
   -I../utilities \
-  -I/usr/local/include \
-  -I/usr/local/include/glib-2.0 \
-  -I/usr/local/lib/glib-2.0/include \
-  -I/usr/local/include/libsoup-2.4 \
-  -I/usr/local/include/libxml2
+  `pkg-config --cflags --libs glib-2.0 libsoup-2.4`
 
 OBJ_UTILS = ../logger/logger.o \
 	../utilities/soup_utils.o
   
-LIBS = \
-  -L/usr/local/lib \
-  -L/usr/X11R6/lib \
-  -lm \
-  -lsoup-2.4 \
-  -lxml2 \
-  -lpthread 
 
 all: shell_wrapper
 
 shell_wrapper: shell_wrapper.o $(OBJ_UTILS) 
-	$(CC) $(CFLAGS) $(LIBS) $(OBJ_UTILS) shell_wrapper.o -o shell_wrapper
+	$(CC) shell_wrapper.o -o shell_wrapper $(OBJ_UTILS) $(CFLAGS)
 
 install:
-	cp shell_wrapper /usr/local/bin/shell_wrapper
-	chgrp bin /usr/local/bin/shell_wrapper
+	cp shell_wrapper /usr/bin/shell_wrapper
+	chgrp bin /usr/bin/shell_wrapper
 	
 clean:
 	rm -f *.core
@@ -36,4 +26,4 @@ clean:
 	rm -f shell_wrapper
 	
 uninstall:
-	rm /usr/local/bin/shell_wrapper
+	rm /usr/bin/shell_wrapper
