--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,7 +1,11 @@
-all:	real_procfsUtils
+all:	real_procfsUtils real_strUtils
 
 real_procfsUtils:
 	make -C procfsUtils all
+	
+real_strUtils:
+	make -C strUtils all	
 
 clean:
 	make -C procfsUtils clean
+	make -C strUtils clean
