--- a/pdpConnector/Makefile
+++ b/pdpConnector/Makefile
@@ -2,16 +2,25 @@ CC=gcc -Wall -std=gnu99 -Werror
 OBJDIR=obj
 SRC=src
 RELEASEDIR=release
-LIBGLIB=`pkg-config --cflags --libs glib-2.0`
+VER_FILE=version
 
 INCLUDE=-I../include
 
 
 all: pdpConnector.o
 
-pdpConnector.o: 
+pdpConnector.o: mkdirs
 	$(CC) -c $(SRC)/pdpConnector.c -o $(OBJDIR)/pdpConnector.o $(LIBGLIB) $(INCLUDE)
 	ln -sf ../$(OBJDIR)/pdpConnector.o $(RELEASEDIR)/pdpConnector-bleeding.o
 	
+release: all
+	cp $(OBJDIR)/pdpConnector.o $(RELEASEDIR)/pdpConnector-v`cat $(VER_FILE)`.o
+	ln -sf pdpConnector-v`cat $(VER_FILE)`.o $(RELEASEDIR)/pdpConnector-latest.o
+	oldV=`cat $(VER_FILE)`; newV=`expr $$oldV + 1`; echo "$$newV" > $(VER_FILE)
+	
+
 clean:
-	rm -rf $(OBJDIR)/*
+	rm -rf $(OBJDIR)/
+
+mkdirs:
+	mkdir -p $(OBJDIR) $(RELEASEDIR)
