Worked on integration of PIP. Got started with system call open(). Not yet done, but adding to function f() works

--- a/Makefile.am
+++ b/Makefile.am
@@ -49,8 +49,8 @@ strace_SOURCES =	\
 noinst_HEADERS = defs.h
 # Enable this to get link map generated
 #strace_CFLAGS = $(AM_CFLAGS) -Wl,-Map=strace.mapfile
-strace_CFLAGS = $(DEPS_CFLAGS)
-strace_LIBS = $(DEPS_LIBS)
+strace_CFLAGS = $(DEPS_CFLAGS) 
+LIBS = $(DEPS_LIBS)
 
 EXTRA_DIST =				\
 	$(man_MANS)			\
