Managed to add JVM/JNI to automake

--- a/.cproject
+++ b/.cproject
@@ -27,6 +27,7 @@
 								<option id="gnu.c.compiler.option.include.paths.83548929" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="/usr/include/glib-2.0"/>
 									<listOptionValue builtIn="false" value="/usr/include"/>
+									<listOptionValue builtIn="false" value="/usr/lib/jvm/java-7-openjdk/include/"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.c.compiler.input.1673901184" superClass="cdt.managedbuild.tool.gnu.c.compiler.input"/>
 							</tool>
@@ -51,7 +52,11 @@
 		<project id="LinuxPEP.null.695750869" name="LinuxPEP"/>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
-	<storageModule moduleId="refreshScope"/>
+	<storageModule moduleId="refreshScope" versionNumber="2">
+		<configuration configurationName="Default">
+			<resource resourceType="PROJECT" workspacePath="/LinuxPEP"/>
+		</configuration>
+	</storageModule>
 	<storageModule moduleId="scannerConfiguration">
 		<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		<scannerConfigBuildInfo instanceId="cdt.managedbuild.toolchain.gnu.base.1552471884;cdt.managedbuild.toolchain.gnu.base.1552471884.304240181;cdt.managedbuild.tool.gnu.c.compiler.base.1379460094;cdt.managedbuild.tool.gnu.c.compiler.input.1673901184">
