Added some #ifdefs which should make execution a bit faster

--- a/.cproject
+++ b/.cproject
@@ -37,6 +37,7 @@
 									<listOptionValue builtIn="false" value="/usr/include/unistring/"/>
 									<listOptionValue builtIn="false" value="/usr/lib/jvm/java-7-openjdk/include/"/>
 									<listOptionValue builtIn="false" value="/usr/include"/>
+									<listOptionValue builtIn="false" value="/usr/lib/gcc/x86_64-unknown-linux-gnu/4.8.2/include"/>
 								</option>
 								<inputType id="org.eclipse.cdt.build.core.settings.holder.inType.1829746596" languageId="org.eclipse.cdt.core.gcc" languageName="GNU C" sourceContentType="org.eclipse.cdt.core.cSource,org.eclipse.cdt.core.cHeader" superClass="org.eclipse.cdt.build.core.settings.holder.inType"/>
 							</tool>
